Security/NetworkPolicies/policies/allow-dns-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
       - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
       - podSelector:
            matchLabels:
              k8s-app: kube-dns
