Security/NetworkPolicies/policies/allow-pods-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pods-egress
spec:
  podSelector:
    matchLabels:
      app: curl
  policyTypes:
    - Egress
  egress:
    - to:
       - podSelector:
            matchLabels:
              app: color-api
