Security/NetworkPolicies/policies/allow-pods.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pods
spec:
  podSelector:
    matchLabels:
      app: color-api
  policyTypes:
    - Ingress
  ingress:
    - from:
       - podSelector:
            matchLabels:
              app: curl
       - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dev
